# CalcGTest

./: CMakeLists.txt
.github/workflows/: ci.yml
tests/: CMakeLists.txt  CMakelists.txt  Calculator_test.cpp
